
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 MAY 14a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - fixed one bug


2024 MAY 09a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - fixed many bugs
  * in bin/Broslawski.wrp
    - improved a few things
    

2024 MAY 01b
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - renamed arakoniomprakas to arakoni2007omprakas
    - deleted find_Qchemave_arakoniomprakas()
    

2024 MAY 01a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - added _averaged_rate_local() and added calls to _averaged_rate_local() for all reactions
      function of Te
  * in model/chem/_NH3_Plasma_32s/arakoni2007v2.c
    - deleted _averaged_rate_local_v2()
  * in model/fluid/_Favre-Reynolds_plasma/fluid_post.c
    - added EoverN to the post variables
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_value_fluid(), changed E/Nn to E/N
    

2024 APR 24a
  * in model/chem/
    - deleted _NH3_Plasma_19s/
    - added _NH3_Plasma_21s/
  * in model/chem/_NH3_Plasma_32s/arakoni2007v3.c
    - added NH3+ and NH2+ ions to solver
    

2024 APR 23b
  * in model/chem/_NH3_Plasma_19s/arakoni2007v3.c
    - fixed bugs
  * in model/chem/_NH3_Plasma_32s/arakoni2007v3.c
    - fixed bugs


2024 APR 23a
  * in model/chem
    - renamed model/chem/_NH3_Plasma_10s/ to model/chem/_NH3_Plasma_32s/
  * in model/chem
    - added _NH3_Plasma_19s
  * in model/chem/_NH3_Plasma_32s/chem.c
    - added arakoni2007v3 model
  * in model/chem/_NH3_Plasma_32s
    - added arakoni2007v3.c
    
  
2024 APR 22c
  * in model/share/transport_share.c
    - added _mueN_H2O() and _mueN_C2H4()
  * in model/thermo/_generic/electronimpact.c
    - added species H2O and C2H4